--- a/css/teste.css
+++ b/css/teste.css
@@ -3,117 +3,123 @@ html, body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:#ffffff;
+    font-size: 14px;
+}
+
+.container{
+    width: 1323px;
+}
+
+.bar{
+    background-color: #FBF3EA;
+    height: 45px;
+    width: 1323px;
+    display: flex;
+    
+
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 290px 20px 290px;
+    border-bottom: 8px solid rgb(56, 23, 23);
+    font-size: 18px;
+    font-weight: 500;
+    color: rgb(56, 23, 23);
+}
+
+.bar:hover{
+    cursor: pointer;
+}
+
+.logo{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    margin-left: 90px;
+    background-image: url(/img/logo-int.png)
+}
+
+.bar nav{
+    text-decoration: none;
+    float: right;
+}
+
+.bar ul{
+    margin-right: 100px;
+    list-style: none;
+    align-items: center;
+    display: flex;
+    gap: 40px;
+    float: right;
+}
+
+.bar button{
+    height: 45px;
+    width: 145px;
+    border-radius: 5px;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    background: linear-gradient(135deg, rgb(6, 147, 227) 0%, rgb(155, 81, 224) 100%);
+}
+
+.hero{
+    display: flex;
+    width: 1903px;
+    height: 1080px;
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.205), rgba(0, 0, 0, 0.9)),
+        url(/img/bg-int.jpg);
+    background-size:contain;
+    background-repeat: no-repeat;
+    flex-direction: column;
+}
+
+.hero span{
+    color: white;
+    font-size: 26px;
+    font-style: normal;
+    margin: 255px auto 0 auto;
 
 }
 
-.line {
-    width: 70px;
-    height: 3px; 
-    background-color:#FFA954;
-    margin: 0 auto;
-}
-
-.photo-header{
-    border: 1px solid blue;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.photo-header h2{
-    color: orange;
-    margin: 5px 0 15px;
-}
-
-.photo-header span{
+.hero h1{
+    font-size: 58px;
+    color: white;
     font-weight: 600;
+    margin: 25px auto;
+
 }
 
-.photo-header .line{
-    margin-bottom: 10px;
-}
-
-.carousel {
-    position: relative;
-    width: 1180px;
-    margin: 0 auto;
-    overflow: hidden;
-    border: 1px solid #ff0000;
-}
-
-.carousel-wrapper {
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-}
-
-.carousel-track {
-    display: flex;
-    transition: transform 0.3s ease-in-out;
-    margin: 0 auto;
-    width: 97%;
+.buttons{
+    margin: 52px auto;
     
 }
 
-.carousel-item {
-    min-width: calc(100% / 3); 
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-
-}
-
-.mask{
-    width: 345px;
-    height: 345px;
-    overflow: hidden; 
-    position: relative;
-}
-
-.carousel-item img{
-    width: auto; 
-    height: 100%; 
-    position: absolute; 
-    left: 50%; 
-    top: 50%; 
-    transform: translate(-50%, -50%); 
-}
-
-.carousel-item h3 {
-    font-size: 18px;
-    margin: 10px 0 5px;
-    color:tomato;
-}
-
-.carousel-item p {
-    font-size: 14px;
-    color: #000000;
-}
-
-/*Navegação*/
-.carousel-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgb(0, 0, 0);
-    background-color: #ff000000;
+.subscribe{
+    height: 60px;
+    width: 180px;
+    border-radius: 5px;
     border: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    background: linear-gradient(135deg, rgb(6, 147, 227) 0%, rgb(155, 81, 224) 100%);
+}
+
+.contact{
+    height: 65px;
+    width: 155px;
+    border-radius: 5px;
+    border: 1px solid white;
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    background-color: rgba(0, 255, 255, 0);
+}
+
+button:hover{
     cursor: pointer;
-    font-size: 50px;
-    font-weight: bold;
-}
-
-.carousel-btn.prev {
-    left: -7px;
-    z-index: 10; 
-}
-
-.carousel-btn.next {
-    right: -6px;
-}
-
-.carousel-btn:hover {
-    color: rgb(255, 136, 0);
-    background-color: rgba(0, 0, 0, 0);
 }
 
