--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ nav ul li{
     height: 133px;
     display: flex;
     margin: 15px auto;
-    background-image: url(/img/logo3.png);
+    background-image: url(/img/logo.png);
     background-size: contain;
     background-position: center; 
     background-repeat: no-repeat;
